# openrouter-python

./: .gitignore  README.md  USAGE_GUIDE.md  check_models.py  extended_model_test.py  generate_report.py  model_analysis_report.md  model_analyzer.py  model_report_viewer.py  model_summary.py  openrouter_analysis_report.md  pyproject.toml  report_template.md  resilient_model_test.py  simple_model_test.py  test_async_api.py  test_real_api.py  test_streaming.py  view_docs.py
docs/: api.rst  conf.py  index.rst
examples/: README.md  async_examples.py  basic_usage.py  chat_examples.py  conversation_manager.py  environment_setup.py  streaming_examples.py
openrouter_py/: __init__.py
openrouter_py/client/: __init__.py  async_client.py  openrouter_client.py
openrouter_py/exceptions/: __init__.py  errors.py
openrouter_py/models/: __init__.py  balance.py  chat.py  model.py  streaming.py
tests/: __init__.py  test_async_client.py  test_client.py  test_errors.py  test_models.py  test_streaming.py
